# hardcover_popfeed

./: .env.example  AGENTS.md  README.md  cliff.toml  pyproject.toml
.github/workflows/: release.yml  sync.yml
hardcover_popfeed/: __init__.py  __main__.py  atproto.py  config.py  hardcover.py  models.py  popfeed.py  sync.py
